# Tice

./: Blog.md  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  tice_sft_grpo_training_final.ipynb
.ipynb_checkpoints/: 04_tice_sft_grpo_training-checkpoint.ipynb
core/: __init__.py  b_cell.py  reward.py  t_cell.py  tumor.py
data/: __init__.py  sampler.py  tcga_params.py
server/: __init__.py  app.py  requirements.txt  tice_environment.py
tice_benchmark_outputs/: base_model_eval.csv  grpo_model_eval.csv  sft_model_eval.csv
tice_benchmark_outputs/Planner data/: val_df.csv
